--- a/app/apps/dashboard/templates/dashboard/nieuwe/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard/nieuwe/dashboard.html
@@ -80,7 +80,7 @@
         {% if not onderwerp or not wijk %}
             <section class="section--seperated--l">
                 <div>
-                    <h2>Top vijf</h2>
+                    <h2>Top tien</h2>
                     <div class="grid-container grid-container--3cols">
                         {% if not onderwerp %}
                             <div class="grid-item bgc-white">
