--- a/app/apps/main/templates/dashboard/dashboard.html
+++ b/app/apps/main/templates/dashboard/dashboard.html
@@ -494,7 +494,7 @@
         </section>
         <section class="section--seperated--l section--dashboard">
             <div class="container__flex flex--wide">
-                <h2>Top vijf</h2>
+                <h2>Top tien</h2>
                 <button type="button"
                         class="btn btn-info"
                         data-action="sidesheet#openSidesheet"
