--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -179,6 +179,10 @@ canvas {
                 border-bottom: 2px solid $green-tint01;
             }
         }
+
+        &:disabled {
+            cursor: default;
+        }
     }
 
     .list-horizontal {
@@ -333,7 +337,7 @@ canvas {
         }
         thead {
             th {
-                color: #5f646d;
+                color: $gray-600;
                 font-weight: 300;
                 border: none;
             }
@@ -345,7 +349,11 @@ canvas {
                 text-align: right;
 
                 &:first-child {
+                    color: $gray-600;
+                }
+                &:nth-child(2) {
                     text-align: left;
+                    padding-left: 0.5em;
                 }
             }
         }
@@ -362,6 +370,23 @@ canvas {
                     animation: fullwidth 1s ease-in-out forwards;
                     animation-iteration-count: 1;
                 }
+            }
+        }
+    }
+
+    .pagination {
+        margin-top: 1em;
+        font-size: 0.6em;
+        display: flex;
+        justify-content: space-between;
+        line-height: 2.4em;
+
+        button {
+            &:first-of-type {
+                transform: rotate(180deg) translateY(2px);
+            }
+            &:disabled {
+                visibility: hidden;
             }
         }
     }
