Stylingfix download-csv

--- a/app/apps/dashboard/templates/charts/dashboard_item.html
+++ b/app/apps/dashboard/templates/charts/dashboard_item.html
@@ -13,7 +13,7 @@
                href="#"
                aria-label="download volledige tabel als .csv"
                title="download volledige tabel als .csv"
-               class="padding--left">{% include "icons/download.svg" %}</a>
+               class="margin--left">{% include "icons/download.svg" %}</a>
         </div>
         <h4>{{ title }}</h4>
         <p>{{ description }}</p>
