--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -710,6 +710,9 @@ body.no-js {
     margin-bottom: 0 !important;
 }
 
+.margin--left {
+    margin-left: 1em !important;
+}
 .padding--bottom {
     padding-bottom: 1em !important;
 }
