--- a/app/apps/dashboard/templates/dashboard/nieuwe/dashboard.html
+++ b/app/apps/dashboard/templates/dashboard/nieuwe/dashboard.html
@@ -7,6 +7,8 @@
 {% block title %}
     Dashboard | PlanR
 {% endblock title %}
+{% block body_class %}
+{% endblock body_class %}
 {% block content %}
     <div class="screen-xl">
         <section class="section--seperated--l">
