--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -34,6 +34,12 @@
                          alt="" />
                     <h1 class="h3">Fout melden via e-mail</h1>
                     <p>Door op ‘Verstuur via e-mail’  te klikken, meld je de volgende gegevens bij deze melding.</p>
+                    <p>Tijdstip van de foutmelding: {{ current_time }}</p>
+                    <p>Pagina URL van de foutmelding: {{ path }}</p>
+                    <p>Type foutmelding: Internal Server Error</p>
+                    <p>Gebruikte browser: {{ user_agent }}</p>
+                    <p>DynaTrace Request ID: {{ dyna_trace_request_id }}</p>
+                    <p>Server ID: {{ server_id }}</p>
                     <ul>
                         <li>Tijdstip, pagina en type van de foutmelding</li>
                         <li>Gebruikte browser</li>
@@ -41,7 +47,11 @@
                         <li>Server ID</li>
                     </ul>
                     <div class="container__flex">
-                        <a href="mailto:..." class="btn btn-action-v2">Verstuur via e-mail</a>
+                        <a href="mailto:...?subject=Interne serverfout: 500&body="
+                           target
+                           _blank
+                           rel="noopener noreferrer"
+                           class="btn btn-action-v2">Verstuur via e-mail</a>
                     </div>
                 </div>
             </div>
