--- a/app/frontend/assets/styles/components/_page-error.scss
+++ b/app/frontend/assets/styles/components/_page-error.scss
@@ -38,6 +38,15 @@
             width: auto;
             white-space: nowrap;
             padding: 0 1em;
+
+            &.hidden {
+                display: none;
+            }
+
+            &.disabled {
+                opacity: 0.25;
+                pointer-events: none;
+            }
         }
     }
 }
