--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -18,6 +18,7 @@
 {% block body %}
     <turbo-frame id="overview">
     <div data-controller="overview">
+        {% include "snippets/messages.html" %}
         <form method="post"
               action="{% url 'melding_lijst' %}"
               id="filterForm"
