--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -721,6 +721,10 @@ body.no-js {
     padding-left: 1em !important;
 }
 
+.padding-bottom-half {
+    padding-bottom: 0.5em;
+}
+
 .margin--bottom {
     margin-bottom: 1em !important;
 }
