--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -36,7 +36,7 @@
                     <p>Door op ‘Verstuur via e-mail’  te klikken, meld je de volgende gegevens bij deze melding.</p>
                     <ul>
                         <li class="padding-bottom-half">
-                            Type foutmelding: <strong>Interne serverfout: 500 PlanR {{ server_id }}</strong>
+                            Type foutmelding: <strong>Interne serverfout 500, PlanR {{ server_id }}</strong>
                         </li>
                         <li class="padding-bottom-half">
                             Tijdstip van de foutmelding: <strong>{{ current_time }}</strong>
@@ -49,7 +49,7 @@
                         </li>
                     </ul>
                     <div class="container__flex">
-                        <a href="mailto:...?subject=Interne serverfout: 500&body=Type foutmelding: Interne serverfout: 500 PlanR {{ server_id }}%0D%0ATijdstip van de foutmelding: {{ current_time }}%0D%0AURL van de foutmelding: {{ path }}%0D%0ABrowser: {{ user_agent }}%0D%0A%0D%0AWellicht heb je nog meer  informatie voor ons:%0D%0AKomt deze fout vaker voor:%0D%0AHeb je een patroon kunnen ontdekken:%0D%0AErvaren je collega’s dezelfde fout:%0D%0A %0D%0AHoe meer informatie we ontvangen, des te beter we de fout kunnen analyseren. Dank voor het melden van de fout.%0D%0A %0D%0A"
+                        <a href="mailto:...?subject=Interne serverfout: 500&body=Type foutmelding: Interne serverfout 500, PlanR {{ server_id }}%0D%0ATijdstip van de foutmelding: {{ current_time }}%0D%0AURL van de foutmelding: {{ path }}%0D%0ABrowser: {{ user_agent }}%0D%0A%0D%0AWellicht heb je nog meer  informatie voor ons:%0D%0AKomt deze fout vaker voor:%0D%0AHeb je een patroon kunnen ontdekken:%0D%0AErvaren je collega’s dezelfde fout:%0D%0A %0D%0AHoe meer informatie we ontvangen, des te beter we de fout kunnen analyseren. Dank voor het melden van de fout.%0D%0A %0D%0A"
                            target="_blank"
                            rel="noopener noreferrer"
                            class="btn btn-action-v2"
