--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -44,7 +44,7 @@
                         <div class="padding-bottom-half">
                             <dt>Tijdstip van de foutmelding:</dt>
                             <dd id="errorTime">
-                                {{ current_timee }}
+                                {{ current_time }}
                             </dd>
                         </div>
                         <div class="padding-bottom-half">
