--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -72,5 +72,5 @@
             </div>
         </div>
     </div>
-    <script src="/static/script/errorpages.js"></script>
+    <script src="/static/script/errorpages.js?v=1.1"></script>
 {% endblock body %}
