--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -70,5 +70,5 @@
             </div>
         </div>
     </div>
-    <script src="/static/script/errorpages.js?v=1.1"></script>
+    <script src="/static/script/errorpages.js?v=1.2" defer></script>
 {% endblock body %}
