--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -70,5 +70,7 @@
             </div>
         </div>
     </div>
-    <script src="/static/script/errorpages.js?v=1.2" defer></script>
 {% endblock body %}
+{% block javascripts_end %}
+    <script src="/static/script/errorpages.js?v=1.2" defer></script>
+{% endblock javascripts_end %}
