--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -72,5 +72,7 @@
             </div>
         </div>
     </div>
-    <script src="/static/script/errorpages.js?v=1.2" defer></script>
 {% endblock body %}
+{% block javascripts_end %}
+    <script src="/static/script/errorpages.js?v=1.2" defer></script>
+{% endblock javascripts_end %}
