--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -3,6 +3,9 @@
 {% block title %}
     Fout 404 - De pagina wordt niet gevonden | PlanR
 {% endblock title %}
+{% block javascripts %}
+    <script src="/static/script/errorpages.js?v=1.3" defer></script>
+{% endblock javascripts %}
 {% block body_class %}
     no-js errorpage
 {% endblock body_class %}
@@ -71,6 +74,3 @@
         </div>
     </div>
 {% endblock body %}
-{% block javascripts_end %}
-    <script src="/static/script/errorpages.js?v=1.2" defer></script>
-{% endblock javascripts_end %}
