hide menu-toggle on error-500

--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -6,7 +6,7 @@
 {% block javascripts %}
 {% endblock javascripts %}
 {% block body_class %}
-    no-js errorpage
+    no-js errorpage error-500
 {% endblock body_class %}
 {% block header %}
     {% with pageTitle="Foutmelding" %}
