--- a/app/frontend/assets/styles/components/_page-error.scss
+++ b/app/frontend/assets/styles/components/_page-error.scss
@@ -50,8 +50,10 @@
         }
     }
 
-    .menu-toggle {
-        opacity: 0;
-        pointer-events: none;
+    &.error-500 {
+        .menu-toggle {
+            opacity: 0;
+            pointer-events: none;
+        }
     }
 }
