--- a/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
+++ b/app/apps/dashboard/templates/dashboard/taken/nieuwe_taakopdrachten.html
@@ -19,7 +19,7 @@
         <section class="section--seperated--l">
             <div class="grid-container grid-container--full"
                  data-controller="chart-utils">
-                {% include "charts/base_chart.html" with title="Aantal taken afgehandeld minus nieuw" description="" period_title=title tabs=taken_nieuw_vs_afgehandeld_tabs only %}
+                {{ TaakopdrachtDoorlooptijden.grafiek_tabs_taken_nieuw_vs_afgehandeld }}
             </div>
         </section>
     </div>
