Possible fix for not opening mail in new tab

--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -59,11 +59,13 @@
                         </div>
                     </dl>
                     <div class="container__flex">
-                        <a href="mailto:productowner-morsb@rotterdam.nl?subject=PlanR - Pagina niet gevonden fout: 404&body=Type foutmelding: Pagina niet gevonden fout 404"
-                           target="_blank"
+                        <a target="_blank"
                            rel="noopener noreferrer"
                            class="btn btn-action-v2"
-                           id="sendEmail">Verstuur via e-mail</a>
+                           id="sendEmail"
+                           href="mailto:productowner-morsb@rotterdam.nl?subject=PlanR - Pagina niet gevonden fout: 404&body=Type foutmelding: Pagina niet gevonden fout 404">
+                            Verstuur via e-mail
+                        </a>
                         <a href="/melding" class="btn btn-action-v2 hidden">Naar overzicht</a>
                     </div>
                 </div>
