--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -61,11 +61,13 @@
                         </div>
                     </dl>
                     <div class="container__flex">
-                        <a href="mailto:productowner-morsb@rotterdam.nl?subject=PlanR - Interne serverfout: 500&body=Type foutmelding: Interne serverfout 500"
-                           target="_blank"
+                        <a target="_blank"
                            rel="noopener noreferrer"
                            class="btn btn-action-v2"
-                           id="sendEmail">Verstuur via e-mail</a>
+                           id="sendEmail"
+                           href="mailto:productowner-morsb@rotterdam.nl?subject=PlanR - Interne serverfout: 500&body=Type foutmelding: Interne serverfout 500">
+                            Verstuur via e-mail
+                        </a>
                         <a href="/melding" class="btn btn-action-v2 hidden">Naar overzicht</a>
                     </div>
                 </div>
